# blood-bayes

./: .gitignore  CONCEPTUAL_PLAYER_NETWORK.md  DATA.md  DOMAIN_EXPERT_REVIEW.md  JOINT_COACH_RACE_MODEL_SCRATCHPAD.md  MODELING.md  MODELING_PERSPECTIVES.md  MODELING_REVIEW.md  NOTES.md  PLAYER_RACE_CONCEPT_MAP.md  PRD.md  README.md  REVIEW_ASSESSMENT.md  TECHNICAL.md  TECHNICAL_REVIEW.md  pyproject.toml
data/curated/: tourplay_link_review.csv  tourplay_reviewed_details.csv  tourplay_wave2_details.csv  tourplay_wave2_plan.csv  tourplay_wave2_review.csv
diagrams/: player_race_concept_map.dot  player_race_process_map.dot  player_race_proxy_map.dot
packs/: ANNOTATION_GUIDE.md  DEFERRED_REVIEWS.md
packs/drafts/: eucalyptus-bowl-2026-v0.4.yaml  eurobowl-2026-final.yaml
reports/: AI_PACK_PREREVIEW.md  EXPLORATORY_SIGNAL.md  PACK_SIGNAL.md  PACK_SIGNAL_PROTOCOL.md  RECOVERED_CORPUS_SIGNAL.md  ROSTER_BUILDER_CROSSWALK.md  SCHEMA_V0_TRIAL.md  TIER_POWER.md  TIER_SIGNAL.md  TOURPLAY_COVERAGE.md  TOURPLAY_ID_COVERAGE.md  TOURPLAY_LINKER.md  TOURPLAY_RECONNAISSANCE.md  WAVE2_PROTOCOL.md  WAVE2_RESULTS.md
src/bb_stats/: __init__.py  contracts.py  packs.py
src/bb_stats/analysis/: __init__.py  event_catalog.py  exploratory_signal.py  naf_audit.py  pack_signal.py  tier_power.py  tier_signal.py  tourplay_coverage.py  tourplay_linker.py  tourplay_resolved.py
src/bb_stats/ingest/: __init__.py  naf.py  tourplay.py  tourplay_registry.py
tests/: test_contracts.py  test_event_catalog.py  test_exploratory_signal.py  test_naf_audit.py  test_naf_ingest.py  test_pack_signal.py  test_packs.py  test_tier_power.py  test_tier_signal.py  test_tourplay_coverage.py  test_tourplay_ingest.py  test_tourplay_linker.py  test_tourplay_registry.py  test_tourplay_resolved.py
